--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,4 +1,4 @@
-name: Go CI test runner with PostgreSQL
+name: Go CI Test
 
 on:
   push:
@@ -25,7 +25,7 @@ jobs:
           --health-retries 5
 
     env:
-      DATABASE_URL: postgres://testuser:testpass@localhost:5432/testdb?sslmode=disable
+      TEST_DATABASE_URL: postgres://testuser:testpass@localhost:5432/testdb?sslmode=disable
 
     steps:
       - name: Checkout code
