--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -26,6 +26,7 @@ jobs:
 
     env:
       TEST_DATABASE_URL: postgres://testuser:testpass@localhost:5432/testdb?sslmode=disable
+      JWT_SECRET: 4YmAXqvm4fvAS/T6P7dwNJI3EakIKyT2k9F7R81bMvSniqu85ibFGb4PdOvEpYsL
 
     steps:
       - name: Checkout code
@@ -39,5 +40,29 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Set up PostgreSQL
+        uses: Harmon758/postgresql-action@v1
+        with:
+          postgresql version: '14'
+          postgresql db: testdb
+          postgresql user: testuser
+          postgresql password: testpass
+          postgresql port: 5432
+          postgresql host: localhost
+          postgresql sslmode: disable
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..10}; do
+            pg_isready -h localhost -U testuser && break
+            sleep 2
+          done
+
+      - name: Create tables from schema.sql
+        env:
+          PGPASSWORD: testpass
+        run: |
+          psql -h localhost -U testuser -d testdb -f ./schema.sql
+      
       - name: Run Tests
-        run: go test ./...
+        run: go test ./... -v
