--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -32,6 +32,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Wait for Postgres to be ready
+        run: |
+          for i in {1..10}; do
+            pg_isready -h localhost -p 5432 && break
+            echo "Waiting for Postgres..."
+            sleep 5
+          done
+
+      - name: Apply database schema
+        run: |
+          psql $TEST_DATABASE_URL -f ./schema.sql
+        env:
+          PGPASSWORD: testpass
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
@@ -39,30 +53,6 @@ jobs:
 
       - name: Install dependencies
         run: go mod download
-
-      - name: Set up PostgreSQL
-        uses: Harmon758/postgresql-action@v1
-        with:
-          postgresql version: '14'
-          postgresql db: testdb
-          postgresql user: testuser
-          postgresql password: testpass
-          postgresql port: 5432
-          postgresql host: localhost
-          postgresql sslmode: disable
-
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          for i in {1..10}; do
-            pg_isready -h localhost -U testuser && break
-            sleep 2
-          done
-
-      - name: Create tables from schema.sql
-        env:
-          PGPASSWORD: testpass
-        run: |
-          psql -h localhost -U testuser -d testdb -f ./schema.sql
       
       - name: Run Tests
         run: go test ./... -v
