--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -25,8 +25,8 @@ jobs:
           --health-retries 5
 
     env:
-      TEST_DATABASE_URL: postgres://testuser:testpass@localhost:5432/testdb?sslmode=disable
-      JWT_SECRET: 4YmAXqvm4fvAS/T6P7dwNJI3EakIKyT2k9F7R81bMvSniqu85ibFGb4PdOvEpYsL
+      TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
     steps:
       - name: Checkout code
@@ -34,25 +34,4 @@ jobs:
 
       - name: Wait for Postgres to be ready
         run: |
-          for i in {1..10}; do
-            pg_isready -h localhost -p 5432 && break
-            echo "Waiting for Postgres..."
-            sleep 5
-          done
-
-      - name: Apply database schema
-        run: |
-          psql $TEST_DATABASE_URL -f ./schema.sql
-        env:
-          PGPASSWORD: testpass
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
-        with:
-          go-version: '1.23.2'
-
-      - name: Install dependencies
-        run: go mod download
-      
-      - name: Run Tests
-        run: go test ./... -v
+          for i in
