--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -34,4 +34,25 @@ jobs:
 
       - name: Wait for Postgres to be ready
         run: |
-          for i in
+          for i in {1..10}; do
+            pg_isready -h localhost -p 5432 && break
+            echo "Waiting for Postgres..."
+            sleep 5
+          done
+
+      - name: Apply database schema
+        run: |
+          psql $TEST_DATABASE_URL -f ./schema.sql
+        env:
+          PGPASSWORD: testpass
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23.2'
+
+      - name: Install dependencies
+        run: go mod download
+      
+      - name: Run Tests
+        run: go test ./... -v
